--- a/note-v1/index.html
+++ b/note-v1/index.html
@@ -6,10 +6,13 @@
     <meta name="viewport" content="width =device-width, initial-scale=1.0">
     <title>Note</title>
     <style>
-        div, span {
+        ::-webkit-scrollbar { display: none; }
+        #dvContent {
             line-height: 1.5em;
             overflow-wrap: break-word;
             outline: none;
+            height: 93.6vh;
+            overflow: auto;
         }
     </style>
 </head>
